--- a/resources/footer.html
+++ b/resources/footer.html
@@ -12,8 +12,8 @@
 								</a>
                             </td>
                             <td>
-                            	<a href="http://www.linkedin.com/pub/joshua-morgan/98/284/359">
-          						<img src="https://static.licdn.com/scds/common/u/img/webpromo/btn_viewmy_120x33.png" width="120" height="33" border="0" align="left" alt="View Joshua Morgan's profile on LinkedIn">
+                            	<a href="https://github.com/ValorMorgan">
+          						<img src="images/GitHub Link Button.png" width="120" height="33" border="0" align="left" alt="View Joshua Morgan's profile on GitHub">
 								</a>
                             </td>
                         </tr>
