--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 <title>Joshua Morgan Portfolio</title>
 </head>
 
-<body>  
+<body>
+<div name="top"></div>
 <div id="b_main">
 	<div id="b_no_footer"> <!-- All above the footer -->
     	<div id="b_sidebar"> <!-- SideBar -->
