Main page fully working.
Sidebar integration needs work.  Detects click, function "changePage" can't be called.

Need project content pages.  Insert resume page.

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <div id="b_main">
 	<div id="b_no_footer"> <!-- All above the footer -->
     	<div id="b_sidebar"> <!-- SideBar -->
-        	<object data="resources/sidebar.html" width="100%" height="100%"></object>
+        	<object id="obj_sidebar" data="resources/sidebar.html" width="100%" height="100%"></object>
         </div> <!-- Close SideBar -->
         
         <div id="b_container">
