--- a/resources/languages.html
+++ b/resources/languages.html
@@ -26,7 +26,7 @@
                 <div id="pic_border" style="margin-left:650px;">
                     <div id="pic_container">
                         <div id="default_pic">
-                            <img src="images/MSU.png" id="default_pic" alt="Michigan State University"/>
+                            <img src="images/C++.png" id="default_pic" alt="Michigan State University"/>
                         </div>
                     </div>
                 </div>
@@ -46,7 +46,7 @@
                 <div id="pic_border" style="margin-left:650px;">
                     <div id="pic_container">
                         <div id="default_pic">
-                            <img src="images/Ranir.png" id="default_pic" alt="Ranir LLC"/>
+                            <img src="images/Java.png" id="default_pic" alt="Ranir LLC"/>
                         </div>
                     </div>
                 </div>
@@ -66,7 +66,7 @@
                 <div id="pic_border" style="margin-left:650px;">
                     <div id="pic_container">
                         <div id="default_pic">
-                            <img src="images/AdvancePackaging.png" id="default_pic" alt="Advance Packaging"/>
+                            <img src="images/HTML.png" id="default_pic" alt="Advance Packaging"/>
                         </div>
                     </div>
                 </div>
@@ -87,7 +87,7 @@
                 <div id="pic_border" style="margin-left:650px;">
                     <div id="pic_container">
                         <div id="default_pic">
-                            <img src="images/AdvancePackaging.png" id="default_pic" alt="Advance Packaging"/>
+                            <img src="images/CSS.png" id="default_pic" alt="Advance Packaging"/>
                         </div>
                     </div>
                 </div>
@@ -108,7 +108,7 @@
                 <div id="pic_border" style="margin-left:650px;">
                     <div id="pic_container">
                         <div id="default_pic">
-                            <img src="images/AdvancePackaging.png" id="default_pic" alt="Advance Packaging"/>
+                            <img src="images/JQuery.png" id="default_pic" alt="Advance Packaging"/>
                         </div>
                     </div>
                 </div>
@@ -128,7 +128,7 @@
                 <div id="pic_border" style="margin-left:650px;">
                     <div id="pic_container">
                         <div id="default_pic">
-                            <img src="images/AdvancePackaging.png" id="default_pic" alt="Advance Packaging"/>
+                            <img src="images/SQL.png" id="default_pic" alt="Advance Packaging"/>
                         </div>
                     </div>
                 </div>
