Only need to upload the resume and get the campus traffic pic but it is DONE! :)

--- a/index.html
+++ b/index.html
@@ -36,6 +36,41 @@
             <div id="b_bgDisplay">
                 <div id="b_content" style="clear:both;"> <!-- Body -->
                     <!-- Page content insreted here -->
+                    <!-- Javascript error message (if not turned on) -->
+                    <div id="text_border">
+        				<div id="text_content">
+                        	<img src="images/Javascript_Error.png" class="default_pic" alt="Javascript Not Active" style="margin-right:10px; float:left;"/>
+                        	<h4 style="text-align:center;">Uh-Oh!  JavaScript is off!</h4>
+                            <p>
+                            	It looks like your JavaScript is not active.  This entire website uses JavaScript in order to load each page.  If you want to be able to use this page, please enable your JavaScript or contact your system administrator.  I am very sorry for the inconvenience.  To note, this page relies heavily on JQuery and thus if JavaScript is enabled but still has issues, perhaps there is an issue with your browser and JQuery.  Below are steps that allow you to enable your JavaScript if you need help.
+                            </p>
+                            <hr/>
+                            <h4>Steps to enable JavaScript:</h4>
+                            <div style="margin-left:100px;">
+                                <h3>Internet Explorer</h3>
+                                <ol>
+                                    <li>Open the <b>Tools</b> menu and click on <b>Internet Options</b>.</li>
+                                    <li>Under the <b>Security</b> tab, click on the <b>Internet</b> zone.</li>
+                                    <li>Click on <b>Default Level</b> and the click the <b>Back</b>.</li>
+                                    <li><b>Refresh</b> the webpage and JavaScript should be enabled.</li>
+                                </ol>
+                                <h3>Firefox</h3>
+                                <ol>
+                                    <li>Open the <b>Tools</b> menu and click on <b>Options</b>.</li>
+                                    <li>Under the <b>Content</b> tab, click the <b>Enable JavaScript</b> check box and make sure it has a <b>check mark</b>.</li>
+                                    <li>Click the <b>Ok</b> button and then <b>Refresh</b> the page.  JavaScript should now be enabled.</li>
+                                </ol>
+                                <h3>Opera</h3>
+                                <ol>
+                                    <li>Open the <b>Tools</b> menu and click on <b>Preferences</b>.</li>
+                                    <li>Under the <b>Advanced</b> tab, click on <b>Content</b>.</li>
+                                    <li>Click the <b>Enable JavaScript</b> check box and make sure it has a <b>check mark</b>.</li>
+                                    <li>Click <b>Ok</b> then the <b>Back</b> button.  <b>Reload</b> the page and JavaScript should be enabled.</li>
+                                </ol>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- End javascript error message -->
                 </div> <!-- Close Body -->
             </div> <!-- Close b_bgDisplay -->
         </div> <!-- Close b_content -->
