--- a/resources/jobs.html
+++ b/resources/jobs.html
@@ -1,6 +1,6 @@
         <script src="js/smoothScroll.js"></script>
         
-        <p id="jbs_header">
+        <p id="page_header">
         	Past Jobs and Career History
         </p>
         
