--- a/resources/languages.html
+++ b/resources/languages.html
@@ -1,6 +1,6 @@
 		<script src="js/smoothScroll.js"></script>
 
-        <p id="lng_header">
+        <p id="page_header">
         	Known Languages and Past Uses
         </p>
         
