--- a/index.html
+++ b/index.html
@@ -60,6 +60,13 @@
                                     <li>Under the <b>Content</b> tab, click the <b>Enable JavaScript</b> check box and make sure it has a <b>check mark</b>.</li>
                                     <li>Click the <b>Ok</b> button and then <b>Refresh</b> the page.  JavaScript should now be enabled.</li>
                                 </ol>
+                                <h3>Chrome</h3>
+                                <ol>
+                                	<li>Click on the <b>Menu</b> button in the top right and select <b>Settings</b>.</li>
+                                    <li>At the bottom, click <b>Show advanced settings...</b> .</li>
+                                    <li>Under <b>Privacy</b> click <b>Content settings...</b> and scroll down to <b>JavaScript</b>.
+                                    <li>Click on <b>Allow all sites to run JavaScript (recommended)</b>.  Click <b>Done</b> and refresh the page.  JavaScript should now be enabled.</li>
+                                </ol>
                                 <h3>Opera</h3>
                                 <ol>
                                     <li>Open the <b>Tools</b> menu and click on <b>Preferences</b>.</li>
