--- a/resources/projects/campustraffic.html
+++ b/resources/projects/campustraffic.html
@@ -7,7 +7,7 @@
           	  <div id="pic_border" style="margin-top:-70px; margin-left:350px;">
                     <div id="pic_container">
                         <div style="width:500px; height:300px;">
-                            <img src="images/Project_campusTraffic.png" width="500px" height="300px" alt="Campus Traffic"/>
+                            <img src="images/Campus_Traffic.PNG" width="500px" height="300px" alt="Campus Traffic"/>
                         </div>
                     </div>
                 </div>
