--- a/resources/sidebar.html
+++ b/resources/sidebar.html
@@ -13,7 +13,7 @@
     
     <a href="#" class="link_proj_campustraffic"><h4>Campus Traffic</h4></a>
     <div class="img_center">
-    	<a href="#" class="link_proj_campustraffic"><img src="../images/Citizens_Info_Homepage.PNG" alt="Citizens Information Center"/></a>
+    	<a href="#" class="link_proj_campustraffic"><img src="../images/Campus_Traffic_sidebar.PNG" alt="Campus Traffic"/></a>
     </div>
     
     <a href="#" class="link_proj_cse335"><h4>CSE 335 - Aquarium Game</h4></a>
