--- a/resources/jobs.html
+++ b/resources/jobs.html
@@ -8,7 +8,7 @@
         	<div id="anchor_content">
             	<nav>
                     <ul>
-                        <li><a href="#Kuali">Kauli Rice</a></li>
+                        <li style="margin-left:0px;"><a href="#Kuali">Kauli Rice</a></li>
                         <li><a href="#Ranir">Ranir LLC</a></li>
                         <li><a href="#AdvancePackaging">Advance Packaging</a></li>
                     </ul>
