--- a/resources/languages.html
+++ b/resources/languages.html
@@ -8,7 +8,7 @@
         	<div id="anchor_content">
             	<nav>
                     <ul>
-                        <li><a href="#Cpp">C++</a></li>
+                        <li style="margin-left:0px;"><a href="#Cpp">C++</a></li>
                         <li><a href="#Java">Java</a></li>
                         <li><a href="#HTML">HTML</a></li>
                         <li><a href="#CSS">CSS</a></li>
