--- a/resources/jobs.html
+++ b/resources/jobs.html
@@ -20,7 +20,7 @@
         	<div id="text_content">
            		<h4 name="Kuali">Kuali Rice Internship</h4> <!-- Kuali Rice Internship -->
                 <hr/>
-                <div id="pic_border" style="margin-left:650px;">
+                <div id="pic_border" style="margin-left:650px; margin-bottom:2000px;">
                     <div id="pic_container">
                         <div id="default_pic">
                             <img src="images/MSU.png" id="default_pic" alt="Michigan State University"/>
